# TengineBroadcast

FaceDetect/: CMakeLists.txt
FaceDetect/src/: UltraFace.cpp  UltraFace.hpp  main.cpp
FaceDetect_Android/Android/app/: build.gradle
FaceDetect_Android/Android/app/src/main/cpp/: CMakeLists.txt
FaceDetect_Android/Android/app/src/main/cpp/include/: UltraFace.hpp
FaceDetect_Android/Android/app/src/main/java/com/facesdk/activity/: ClassifierActivity.java
FaceDetect_Android/Android/app/src/main/java/com/facesdk/utils/: BitmapUtils.java
